Correctly handle singleton conditional nodes cs:if and cs:else-if. Fixes breakage in the distributed Chicago styles under citeproc-js.  Checkin includes version bump etc.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,19 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.0.57
+=========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Correctly handle singleton conditional
+  nodes.  Affects cites to theses in the
+  Chicago styles.
+
+
+=========================
 Changes in version 1.0.56
 =========================
 
