Update CHANGES.txt, bundle code to reflect recent checkin.  Version bumped in build.js by previous checkin.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.0.60
+=========================
+
+-----------
+Enhancement
+-----------
+
+- Turn on the parsing of name prefixes and
+  suffixes by default.
+
+
+=========================
 Changes in version 1.0.59
 =========================
 
